--- a/style.css
+++ b/style.css
@@ -24,21 +24,26 @@
 }
 
 .main{
-	width: 500px;
-	background-color: green;
+	width: 960px;
 	margin: 0 auto;
 }
-.blog{
-	width: 230px;
-	height: 1400px
-	background-color: palegreen;
-	float: left;
-}
-.sidebar{
+.sideber-left{
 	width: 230px;
 	height: 1400px;
 	background-color: palegreen;
-	float: right;
+	float: left;
+}
+.blog{
+	width: 500px;
+	height: 1400px;
+	background-color: limegreen;
+	float: left;
+}
+.sideber-right{
+	width: 230px;
+	height: 1400px;
+	background-color: palegreen;
+	float: left;
 }
 .footer{
 	width: 100%;
